Attempt spacing fix for mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -502,11 +502,11 @@ header .container {
     }
 
     .copy, .news-link {
-      padding-top:4%;
+      margin-top:4%;
     }
 
     .title {
-      padding-top:8%;
+      margin-top:8%;
     }
 
     .news-item .col2 {
